[CAMEL-16965]tests in camel-leveldb failed with JDK17